<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity_drawer_layout"
    android:fitsSystemWindows="false"
    tools:openDrawer="start"
    tools:context=".controller.activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolBarStyle"
            app:titleTextColor="@android:color/white"
            app:subtitleTextColor="@android:color/black"/>


        <!-- FrameLayout for our fragments -->
        <FrameLayout
            android:id="@+id/main_activity_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/activity_main_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:itemIconTint="@drawable/bottom_navigation_colors"
            app:itemTextColor="@drawable/bottom_navigation_colors"
            app:menu="@menu/bottom_navigation_menu"
            android:layout_alignParentBottom="true"/>

    </LinearLayout>


    <!-- 2 | NavigationView -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_activity_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimarylight"
        app:itemTextColor="@android:color/white"
        app:itemIconTint="@android:color/white"
        app:menu="@menu/main_activity_menu_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>