<resources>
    <string name="app_name">Findapro</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="field_cannot_be_blank">ne peut pas étre vide</string>


    <string-array name="statut_arrays">
        <item>Particulier </item>
        <item>Professionnel</item>
    </string-array>

    <string-array name="job_arrays">
        <item>Plombier</item>
        <item>Electricien</item>
        <item>Peintre</item>
        <item>Coiffeur</item>
    </string-array>

    <string-array name="status_assignment_arrays">
        <item>En cours</item>
        <item>Fini</item>
        <item>Annuler</item>
        <item>En attente</item>
        <item>Refuser</item>

    </string-array>

    <string name="toolbar_title_mentor_chat_activity">Chats de discussions</string>
    <string name="text_input_title_mentor_chat_activity">Composer votre message</string>
    <string name="button_title_mentor_chat_activity">ENVOYER</string>
    <string name="text_view_mentor_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>


    <string name="no_blank_field">Veuillez décrire votre demande</string>
    <string name="pro_refuse_assignment">Vous avez refusé la mission</string>
    <string name="user_refuse_assignment">Votre demande d\'intervention est refusé</string>
    <string name="not_rated">Vous n\'avez pas encore noté la mission</string>
    <string name="assignment_finish">la mission est terminée</string>
    <string name="pending_assignment">Vous n\'avez pas encore répondu à la mission</string>
    <string name="waiting_for_response">Votre demande est en attente d\'une réponse</string>
    <string name="cancel_assignment">Annulation</string>
    <string name="cancel_assignment_question">Voulez-vous vraiment annuler cette mission ?</string>
    <string name="finish_assignment">Terminer la mission</string>
    <string name="finish_missio_question">Êtes-vous sure que la mission est bien terminée</string>
    <string name="no_date_found">Aucune date trouvée</string>
    <string name="add_comment">Ajouté un commentaire</string>
    <string name="chat_restrict_pending">Le chat n\'est pas disponible pour les missions en attente</string>
    <string name="chat_restrict_refuse">Le chat n\'est pas disponible pour les missions refusées</string>
    <string name="no_connexion">Pas de connexion internet</string>
    <string name="wait_date">En attente d\'une date</string>
    <string name="new_date_title_notif">Nouvelle date d\'intervention</string>
    <string name="new_date_text_notif">Une nouvelle date d\'intervention vient d\'être ajouté à votre mission</string>
    <string name="cancel_assignment_title_notif">Mission Annulée</string>
    <string name="cancel_assignment_notif_text">Votre mission a été annulée</string>
    <string name="end_assignment_title_notif">Mission Terminée</string>
    <string name="end_assignment_notif_text">Votre mission a été terminée</string>
    <string name="new_assignment_title_notif">Nouvelle mission</string>
    <string name="new_assignment_text_notif">Vous avez une nouvelle mission en attente</string>
    <string name="toolbar_title_describe">Description</string>
    <string name="title_toolbar_assignment_activity">Demande d\'intervention</string>
    <string name="toolbar_title_assignment_choice">Proposition de mission</string>
    <string name="accept_assignment_notification_title">Mission acceptée</string>
    <string name="acept_assignment_text_notification">Votre mission a été acceptée</string>
    <string name="assignment_refuse_notification_title">Mission refusée</string>
    <string name="assignment_refuse_text_notification">Votre mission a été refusée</string>
    <string name="tootlbar_title_chat_activity">Chat</string>
    <string name="new_message_notification_title">Nouveau message</string>
    <string name="new_image_message_notif_title">Nouvelle image</string>
    <string name="new_image_notif_text">Vous avez reçu une nouvelle image</string>
    <string name="adress_not_found">L\'adresse n\'est pas valide</string>
    <string name="change_your_adress">Vous devez entrer une adresse valide</string>
    <string name="Toolbar_title_notification_activity">Notification</string>
    <string name="toolbar_title_profil_activity">Profil</string>
    <string name="toolbar_title_ratin_activity">Notation</string>
    <string name="first_message_in_chat">Nouvelle mission</string>
    <string name="describe_user_problem">Description du problème de l\'utilisateur :</string>
    <string name="created_date">Date de création :</string>
    <string name="date_assignment">Date d\'intervention:</string>
    <string name="end_date">Date de fin :</string>
    <string name="rate_assignment_button">Noter la mission</string>
    <string name="cancel_assignment_button">Annuler la mission</string>
    <string name="reply_assignment_button">Répondre à la mission</string>
    <string name="finish_mission">Terminer la mission</string>
    <string name="job1">Spécialité :</string>
    <string name="describe_your_assignment">Veuillez détailler votre demande pour le professionnel ci-dessus. Vous recevrez une réponse dans les plus brefs délais.</string>
    <string name="describe_here">Composer votre demande ici</string>
    <string name="cancel_mission">Annuler</string>
    <string name="send_assignment_button">Envoyer la demande</string>
    <string name="name">Nom :</string>
    <string name="adress">Adresse :</string>
    <string name="city">Ville :</string>
    <string name="avis">Avis</string>
    <string name="describe_user_assignment_problem">Description du problème de l\'utilisateur :</string>
    <string name="refuse_button">Refuser</string>
    <string name="accept_button">Accepter</string>
    <string name="sign_in_button">Connexion</string>
    <string name="user_type">Type d\'utilisateur :</string>
    <string name="job_choice">Profession :</string>
    <string name="fullname">Nom et prénom</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="adress_information_form">Adresse</string>
    <string name="city_information_form">Ville</string>
    <string name="postal_code">Code postal</string>
    <string name="country">Pays</string>
    <string name="save">Sauvegarder</string>
    <string name="no_notification">Aucune notification</string>
    <string name="no_assignment_planned">Aucune Mission planifiée</string>
    <string name="rating_button">Noter</string>
    <string name="cancel_filter_button">Annuler le filtre</string>
    <string name="no_assignment">Aucune Mission</string>
    <string name="no_chat">Aucune conversation</string>
    <string name="Status">Status</string>
    <string name="job_search">Profession recherchée:</string>
    <string name="max_distance">Distance max :</string>
    <string name="min_rate">Note minimal :</string>
    <string name="search">Rechercher</string>
    <string name="cancer_filter_button">Annuler le filtre</string>
    <string name="no_pro_found">Aucun Pro trouvé</string>
    <string name="no_rate">AUCUN AVIS</string>
    <string name="assignment1">Missions</string>
    <string name="my_assignments">Mes missions</string>
    <string name="Chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="planning">Planning</string>
    <string name="personel_information">Information personnelle</string>
    <string name="sign_out">Déconnexion</string>
    <string name="activity_profil_no_item">Aucun avis</string>
    <string name="information_form_toolbar_title">Formulaire d\'information</string>
    <string name="imposible_already_request">Impossible déjà une demande en attente avec ce pro</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="aucune_image">Aucune image</string>
    <string name="new_message">new message</string>
    <string name="new_image">new image</string>
    <string name="Planning">Planning</string>

</resources>
