<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".controller.activity.FirebaseUIActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="FINDAPRO"
                android:textColor="@color/white"
                android:textSize="50dp"
                android:textStyle="bold"
                android:layout_margin="@dimen/default_margin"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
            android:id="@+id/auth_google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_button"
            />


</LinearLayout>