<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragment.UserListFragment"
    android:orientation="vertical">


<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/cancer_filter_button"
    android:id="@+id/fragment_user_list_cancel_search_button"
    android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/fragment_user_list_no_item"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="@dimen/default_margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_pro_found"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_users_list_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>